welcome.lessons.welcome.bat.bool1.LoneTeen.scala.error
loneTeen:14: error: ':' expected but identifier found.
def test(a Int, b: Int):Boolean = 
           ^loneTeen:32: error: identifier expected but '}' found.
 }
 ^