welcome.lessons.welcome.bat.bool1.LoneTeen.scala.code
def loneTeen(a:Int, b:Int):Boolean = {
	if (test (a,b))
	{
		true
	}
	else if (test (b,a))
	{
		true
	}
	else false
	
}

def test(a Int, b: Int):Boolean = 
{
	if (12 < a && a <20 )
	{
		if (13 > b || 19< b)
		{
			true
		}
		else
			false
	}
	else
	{
		false
	}
	
}
